Closed Bug 1178976 Opened 10 years ago Closed 10 years ago

Post-write barriers missing in ObjectWeakMap

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
firefox42 --- fixed

People

(Reporter: jimb, Assigned: jimb)

Details

Attachments

(1 file)

ObjectWeakMap::add fails to record the new JSObject key in the store buffer, so that a moving collection can rehash the entry when the JSObject is tenured.
Assignee: nobody → jimb
Status: NEW → ASSIGNED
Attachment #8627898 - Flags: review?(terrence)
Attachment #8627898 - Flags: review?(terrence) → review+
You might want to recheck the weird weakmap bug you were seeing after applying this, given that it included weakmap entries going missing.
Flags: needinfo?(sphink)
Flags: in-testsuite-
Target Milestone: --- → mozilla42
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Clearning ni. Seems the issue was on an OHM.
Flags: needinfo?(sphink)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: