Bug 1178976: Add a post-write barrier to ObjectWeakMap::add. r=terrence